examples/test/testpolicy3858.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3858
  namespace: namespace69
spec:
  podSelector:
    matchLabels:
      key27: value11
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key9: value27
          key44: value17
      podSelector:
        matchLabels:
          key4: value24
          key5: value14
          key40: value6
